--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   font-family: 'Lato', sans-serif;
-  font-size: 1.2em;
+  /* font-size: 1.2em; */
+  font-size: 1em;
   box-sizing: border-box;
   background-color: #666;
   /* background-image: url("img/images.jpg"); */
