--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,6 @@
 
-body {
-  margin: 0;
-  font-family: 'Lato', sans-serif;
-  font-size: 1em;
+* {
   box-sizing: border-box;
-  background-color: #666;
-  background-size: 2%;
 }
 
 :root {
@@ -18,13 +13,30 @@ body {
   --menu-btn-width-selected: calc(var(--menu-btn-width) * 1.15);
 }
 
-main {
+body {
+  height: 100vh;
+  margin: 0;
+  font-family: 'Lato', sans-serif;
+  font-size: 1em;
   box-sizing: border-box;
+  background-color: #666;
+  background-size: 2%;
+}
+
+p {
+  margin: .5em 0;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 20px;
+  min-height: 50%;
 }
 
 main.main-margin-top {
-  margin-top: 80px;
+  margin-top: 90px;
 } 
 
 nav {
@@ -45,7 +57,6 @@ nav {
 .menu {
   display: flex;
   list-style-type: none;
-  margin: 0;
   padding: 0;
 }
 
@@ -86,20 +97,21 @@ nav {
 }
 
 #home, #contact {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center; */
+  margin-bottom: .5em;
 }
 
-#home {
+/* #home {
   min-height: 380px;
-  height: 50vh;
-}
+  max-height: 50vh;
+} */
 
-#contact {
+/* #contact {
   min-height: 50px;
   height: 50vh;
-}
+} */
 
 .center {
   display: flex;
@@ -195,3 +207,20 @@ figcaption {
 }
 
 /* Utility classes - end */
+
+@media screen and (max-width: 1000px) {
+  .my-works {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .container {
+    width: 95%;
+  }
+
+  figure {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
