--- a/styles.css
+++ b/styles.css
@@ -28,11 +28,7 @@ p {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   padding: 20px;
-  min-height: 50%;
 }
 
 main.main-margin-top {
@@ -47,6 +43,8 @@ nav {
   left: 0;
   top: 0;
   right: 0;
+  box-shadow: 0px 4px 5px #00000050;
+  z-index: 10;
 }
 
 .container {
@@ -97,21 +95,19 @@ nav {
 }
 
 #home, #contact {
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content: center; */
+  justify-content: center;
   margin-bottom: .5em;
 }
 
-/* #home {
-  min-height: 380px;
-  max-height: 50vh;
-} */
+#home {
+  min-height: 50vh;
+}
 
-/* #contact {
-  min-height: 50px;
-  height: 50vh;
-} */
+#contact {
+  min-height: 40vh;
+}
 
 .center {
   display: flex;
@@ -172,6 +168,22 @@ figcaption {
   color: rgb(255, 255, 158);
 }
 
+.simulation-video {
+  width: 70%;
+}
+
+.app-features {
+  width: 60%;
+  margin: 0 auto;
+  padding-left: 5%;
+  text-align: left;
+}
+
+.app-features ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 /* Utility classes - start */
 
 .mt-1 {
@@ -212,6 +224,10 @@ figcaption {
   .my-works {
     width: 100%;
   }
+
+  .app-features {
+    width: 80%;
+  }
 }
 
 @media screen and (max-width: 700px) {
@@ -222,5 +238,9 @@ figcaption {
   figure {
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .simulation-video {
+    width: 80%;
   }
 }
