--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ nav {
   left: 0;
   top: 0;
   right: 0;
-  box-shadow: 0px 4px 5px #00000050;
+  box-shadow: 0px 2px 5px #00000080;
   z-index: 10;
 }
 
@@ -168,7 +168,7 @@ figcaption {
   color: rgb(255, 255, 158);
 }
 
-.simulation-video {
+.video-from-simulation {
   width: 70%;
 }
 
@@ -240,7 +240,7 @@ figcaption {
     margin-right: 0;
   }
 
-  .simulation-video {
-    width: 80%;
+  .video-from-simulation {
+    width: 90%;
   }
 }
