--- a/css/styles.css
+++ b/css/styles.css
@@ -200,6 +200,16 @@ figcaption {
   animation: animate-height 0.5s ease-in-out;
 }
 
+.scale-up-on-hover {
+  transform: scale(1);
+  transition: transform 0.3s;
+}
+
+.scale-up-on-hover:hover {
+  transform: scale(1.1);
+}
+
+
 @keyframes animate-height {
   0% {height: var(--views-container-initial-height)}
   100% {height: var(--views-container-target-height)}
