--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 :root {
-  --nav-background: #444;
+  --nav-background: rgba(10, 30, 53, 0.9);
   --nav-color: white;
   --nav-style-color: #ddd;
   --link-color: rgb(226, 169, 82);
@@ -18,7 +18,10 @@ body {
   font-family: 'Lato', sans-serif;
   font-size: 1em;
   box-sizing: border-box;
-  background-color: #666;
+  background-image: url('../images/drip-4267390-800px.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: rgb(19, 43, 68);
 }
 
 p {
@@ -28,6 +31,10 @@ p {
 ul {
   margin-top: 0;
   margin-bottom: 0;
+}
+
+main, nav {
+  box-shadow: 0px 2px 5px #00000080;
 }
 
 main {
@@ -47,7 +54,6 @@ nav {
   left: 0;
   top: 0;
   right: 0;
-  box-shadow: 0px 2px 5px #00000080;
   z-index: 10;
 }
 
@@ -76,7 +82,7 @@ nav {
 .menu-btn-regular {
   width: var(--menu-btn-width);
   background-color: #222;
-  border: 2px solid #222;
+  border: 2px solid #aaa;
   transition: all 1.5s;
 }
 
